[gd_scene load_steps=8 format=3 uid="uid://cahfh0rrahqjd"]

[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets Space Invaders (2)/Assets Space Invades/font/andina.ttf" id="1_8goic"]
[ext_resource type="Script" path="res://Cena/start_screen.gd" id="1_r3pa1"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets Space Invaders (2)/Assets Space Invades/Invaders/Invader3-1.png" id="2_0kra2"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets Space Invaders (2)/Assets Space Invades/Invaders/Invader2-1.png" id="3_e3tqa"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets Space Invaders (2)/Assets Space Invades/Invaders/Invader1-1.png" id="4_ia11l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28lea"]
bg_color = Color(0.361521, 0.559442, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot1xe"]
bg_color = Color(0, 0, 1, 1)

[node name="Start_Screen" type="CanvasLayer"]
script = ExtResource("1_r3pa1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer_1" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer_1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_8goic")
theme_override_font_sizes/font_size = 90
text = "SPACE
INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer_2" type="VBoxContainer" parent="MarginContainer/VBoxContainer_1"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer_3" type="VBoxContainer" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="InvaderContainer_1" type="HBoxContainer" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect_1" type="TextureRect" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_1"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_0kra2")

[node name="Label_1" type="Label" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8goic")
text = " = 10 Pontos"

[node name="InvaderContainer_2" type="HBoxContainer" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect_2" type="TextureRect" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_2"]
unique_name_in_owner = true
modulate = Color(0.796078, 0.945098, 0, 1)
texture_filter = 1
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
texture = ExtResource("3_e3tqa")

[node name="Label_2" type="Label" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8goic")
text = " = 20 Pontos"

[node name="InvaderContainer_3" type="HBoxContainer" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect_3" type="TextureRect" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_3"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_ia11l")

[node name="Label_3" type="Label" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2/VBoxContainer_3/InvaderContainer_3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8goic")
text = " = 40 Pontos"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer_1/VBoxContainer_2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_8goic")
theme_override_styles/hover = SubResource("StyleBoxFlat_28lea")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ot1xe")
text = "Start Game"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer_1/VBoxContainer_2/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
